# trinity

./: .gitignore  .gitmodules  Makefile  README.md
drivers/: adxl345.c  gpio.c  i2c.c  ledmatrix.c  pcf8561.c  pwm.c
includes/: types.h
includes/drivers/: adxl345.h  gpio.h  i2c.h  ledmatrix.h  pcf8561.h  pwm.h
rpi-amp/: CMakeLists.txt  main.c
rpi-sensor-buttons/: main.c
rpi-sensor-ultrasonic/: main.c
rpi-sensor-waterlevel/: main.c
server-mockup/: main.c
